# turtlewowsim

./: .pdm-python  README.md  installer.bat  pyproject.toml  requirements.txt
classicmagedps/: __init__.py  cooldowns.py  debuffs.py  dots.py  env.py  ignite.py  mage.py  simulation.py  specs.py  utils.py
examples/: cooldowns.py  fireaptest.py  frost.py  loatheb.py  locks_and_mages.py  num_lock_test.py  num_mage_test.py  simulation.py  single_iteration.py  single_iteration_lock.py  single_iteration_mage.py  t2test.py
sim/: character.py  cooldowns.py  debuffs.py  dot.py  dots.py  env.py  fire_dots.py  ignite.py  improved_shadow_bolt.py  mage.py  mage_options.py  mage_talents.py  shadow_dots.py  simulation.py  spell_school.py  talent_school.py  utils.py  warlock.py  warlock_options.py  warlock_talents.py
simulations/: locks_and_mages.py  num_lock_test.py  single_iteration_lock.py  t2test.py
simulations/sim/: dot.py  shadow_dots.py  spell.py  utils.py  warlock.py
src/turtlewowsim/: frost.py  num_lock_test.py  simulation.py
src/turtlewowsim/sim/: __init__.py  character.py  cooldowns.py  env.py  improved_shadow_bolt.py  mage.py  mage_talents.py  simulation.py  warlock_talents.py
turtlewow_sim/: character.py  cooldowns.py  debuffs.py  dots.py  env.py  ignite.py  mage.py  mage_options.py  simulation.py  specs.py  utils.py
