[tool.poetry]
name = "turtlewow_sim"
version = "1.0.0"
description = ""
authors = ["mcdallas <mcdallas@protonmail.com>", "pepopo978 <pepopo978@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
simpy = "^4.1.1"
tqdm = "^4.46.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
